--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CodepathMail</string>
     <string name="title_app">Pika Mail</string>
+    <string name="load_more_text">Load More</string>
 </resources>
