--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
-    <string name="app_name">CodepathMail</string>
-    <string name="title_app">Pika Mail</string>
-    <string name="load_more_text">Load More</string>
+    <string name="app_name">Pikachu Wishlist</string>
+    <string name="title_app">Pika Wishlist</string>
+    <string name="load_more_text">Add</string>
+    <string name="item_text">I wish to get a…</string>
+    <string name="store_or_url_text">Store or URL</string>
+    <string name="currency_hint">25.00</string>
+    <string name="something_for_options">Something For options</string>
 </resources>
